<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.SettingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp">

        <TextView
            android:id="@+id/tv_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center|start"
            android:text="@string/setting"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_ui"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ui"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/setting_ui"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_setting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_setting" />

        <LinearLayout
            android:layout_marginTop="4dp"
            android:id="@+id/linearLayoutTheme"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/background_roundedcorner_settings"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ui">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <View
                    android:backgroundTint="?attr/colorOnSecondary"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/ic_outline_dark_mode_24" />

                <TextView
                    android:id="@+id/tv_change_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_theme"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_theme"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="8dp"
                android:alpha="0.5"
                android:gravity="center"
                android:text="@string/theme_now"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/setting_account"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/linearLayoutTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutTheme" />

        <LinearLayout
            android:layout_marginTop="4dp"
            android:id="@+id/linearLayoutAccount"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/background_top_roundedcorner_settings"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_account">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <View
                    android:backgroundTint="?attr/colorOnSecondary"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/ic_baseline_account_circle_24" />

                <TextView
                    android:id="@+id/tv_change_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:alpha="0.5"
                android:background="@drawable/ic_baseline_chevron_right_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/black_100"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayoutAccount"
            app:layout_constraintEnd_toEndOf="@+id/linearLayoutAccount"
            app:layout_constraintStart_toStartOf="@+id/linearLayoutAccount" />

        <LinearLayout
            android:id="@+id/linearLayoutLogout"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/background_bottom_roundedcorner_settings"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:paddingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutAccount">

            <View
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="8dp"
                android:alpha="0.9"
                android:background="@drawable/ic_baseline_logout_24"
                android:backgroundTint="@color/red" />

            <TextView
                android:id="@+id/tv_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:alpha="0.9"
                android:textColor="@color/red"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>