<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_sea"
        app:layout_constraintBottom_toBottomOf="@+id/profileImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="64dp"
        android:padding="12dp"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        tools:src="@tools:sample/avatars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/profile"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileImage" />

    <LinearLayout
        android:id="@+id/linearLayoutUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"
        android:gravity="center|start"
        app:layout_constraintEnd_toEndOf="@+id/profile"
        app:layout_constraintStart_toStartOf="@+id/profile"
        app:layout_constraintTop_toBottomOf="@+id/profile">

        <View
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="8dp"
            android:alpha="0.5"
            android:background="@drawable/ic_baseline_face_retouching_natural_24"
            android:backgroundTint="?attr/colorOnSecondary" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="36dp"
        android:alpha="0.5"
        app:layout_constraintEnd_toEndOf="@+id/linearLayoutUsername"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutUsername"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutUsername" />

    <LinearLayout
        android:id="@+id/linearLayoutEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center|start"
        app:layout_constraintEnd_toEndOf="@+id/profile"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutUsername"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutUsername">

        <View
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="8dp"
            android:alpha="0.5"
            android:background="@drawable/ic_baseline_attach_email_24"
            android:backgroundTint="?attr/colorOnSecondary" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="36dp"
        android:alpha="0.5"
        app:layout_constraintEnd_toEndOf="@+id/linearLayoutEmail"
        app:layout_constraintStart_toStartOf="@+id/linearLayoutEmail"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutEmail" />


</androidx.constraintlayout.widget.ConstraintLayout>
